--- a/locales/en.json
+++ b/locales/en.json
@@ -122,10 +122,9 @@
     "delete-filter": "Delete filter",
     "role": {
       "title": "Role",
-      "ADMIN": "Administrator",
-      "OPERATOR": "Operator",
-      "SALE": "Salesmen",
-      "INTERN": "Intern"
+      "SUPERADMIN": "Administrator",
+      "MODERATOR": "Moderator",
+      "PARTNER": "Company partner"
     },
     "index": {
       "fullname": "Full name",
