--- a/locales/vi.json
+++ b/locales/vi.json
@@ -124,7 +124,7 @@
       "title": "Chức vụ",
       "SUPERADMIN": "Quản trị viên",
       "MODERATOR": "Người kiểm duyệt",
-      "PARTNER": "Doanh nghiệp"
+      "AGENT": "Doanh nghiệp"
     },
     "index": {
       "fullname": "Họ và tên",
