--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,9 @@
     "user": {
       "title": "User management"
     },
+    "location": {
+      "title": "Location management"
+    },
     "service": {
       "title": "Service management"
     },
