--- a/locales/vi.json
+++ b/locales/vi.json
@@ -61,6 +61,9 @@
     "user": {
       "title": "Quản lý nhân viên"
     },
+    "location": {
+      "title": "Quản lý địa danh"
+    },
     "service": {
       "title": "Quản lý dịch vụ"
     },
