feat(NM-46): added conversation management in admin

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,7 +9,7 @@
   },
   "sidebar": {
     "online": "Online",
-    "main": "Main page",
+    "main": "Customers",
     "user": "System users",
     "role": "System roles",
     "location": "Service locations",
