--- a/locales/vi.json
+++ b/locales/vi.json
@@ -10,7 +10,7 @@
   },
   "sidebar": {
     "online": "Đang hoạt động",
-    "main": "Trang chủ",
+    "main": "Khách hàng",
     "user": "Nhân viên hệ thống",
     "role": "Vai trò người dùng",
     "location": "Thông tin địa điểm",
