feat(NM-62): added service finding to FE

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,8 +15,7 @@
     "location": "Service locations",
     "category": "Categories",
     "service": "Service catalog",
-    "amenity": "Amenity builder",
-    "setting": "System setting"
+    "amenity": "Amenity builder"
   },
   "navbar": {
     "profile": "Profile",
