feat(NM-64): improved amenity icon

--- a/locales/en.json
+++ b/locales/en.json
@@ -111,6 +111,7 @@
     "title": "Amenity management",
     "search": "Finding amenities",
     "name": "Name",
+    "icon": "Icon",
     "description": "Description",
     "create-new": "Create new amenity",
     "edit": "Edit amenity"
