--- a/locales/vi.json
+++ b/locales/vi.json
@@ -121,16 +121,29 @@
     "title": "Quản lý dịch vụ",
     "search": "Tìm kiếm dịch vụ",
     "category": "Loại hình dịch vụ",
-    "location": "Địa điểm dịch vụ",
+    "location": "Địa điểm",
     "name": "Tên dịch vụ",
-    "description": "Mô tả dịch vụ",
+    "description": "Mô tả",
     "price": "Giá dịch vụ",
-    "amenities": "Tiện ích dịch vụ",
-    "address": "Địa chỉ dịch vụ",
+    "amenities": "Tiện ích",
+    "address": "Địa chỉ",
     "images": "Hình ảnh",
     "thumbnail": "Ảnh đầu tiên là thumbnail",
-    "phone": "Số điện thoại dịch vụ",
+    "phone": "Số điện thoại",
     "origin": "Trang chủ",
     "edit": "Chỉnh sửa dịch vụ"
+  },
+  "chat": {
+    "title": "Cuộc hội thoại",
+    "no-email": "Không có email",
+    "customer": "Khách hàng",
+    "last-active": "Hoạt động lần cuối",
+    "first-contacted": "Lần đầu liên lạc",
+    "conversation-started": "Bắt đầu cuộc hội thoại",
+    "conversation-in-progress": "Đang diễn ra",
+    "conversation-ended": "Đã kết thúc",
+    "general-info": "Thông tin chung của khách hàng",
+    "customer-summary": "Thông tin khách hàng",
+    "service-interest": "Dịch vụ quan tâm"
   }
 }
