--- a/locales/en.json
+++ b/locales/en.json
@@ -67,7 +67,8 @@
     "PERMISSION_DENIED": "Unauthorized access. You cannot access to this content at this moment",
     "FILE_UPLOADED_FAILED": "An error has occurred while trying to upload your image. Please try again",
     "RESOURCE_CREATED_FAILED": "An error has occurred while trying to submit. Please try again",
-    "DUPLICATED": "Resource information is duplicated with another. Please check again"
+    "DUPLICATED": "Resource information is duplicated with another. Please check again",
+    "NOT_FOUND": "Resource not found"
   },
   "users": {
     "title": "User management",
@@ -119,16 +120,16 @@
   "services": {
     "title": "Service management",
     "search": "Finding services",
-    "category": "Service category",
-    "location": "Location service",
+    "category": "Category",
+    "location": "Location",
     "name": "Name",
     "description": "Description",
     "price": "Service price",
-    "amenities": "Service amenities",
-    "address": "Service address",
-    "images": "Service images",
+    "amenities": "Amenities",
+    "address": "Address",
+    "images": "Images",
     "thumbnail": "First image will be thumbnail",
-    "phone": "Phonenumber",
+    "phone": "Phone number",
     "origin": "Main page",
     "edit": "Edit service"
   },
